fix: micro alignment fix

--- a/frontend/order-delivery-frontend/public/order-form/__button/order-form__button.css
+++ b/frontend/order-delivery-frontend/public/order-form/__button/order-form__button.css
@@ -1,5 +1,6 @@
 .order-form__button {
     pointer-events: auto;
+    align-self: flex-start;
     padding: 8px 12px;
     background-color: var(--main-color);
     border: none;
